ajout de commentaire

--- a/edla/conclusion.tex
+++ b/edla/conclusion.tex
@@ -1,6 +1,7 @@
 \chapter*{Conclusion}
 \addcontentsline{toc}{chapter}{Conclusion}
 %solution envisagé
+%TODO voir si on laisse cette parite et qu'on ajoute un truc concernant la dll ou si on supprime
 Durant cet état de l'art, nous avons étudié plusieurs publications portant sur la détection et le suivi
 d'une main. Nous avons vu une première solution utilisant une image couleur. Cette solution était
 intéressante quand les caméras de profondeur n'étaient pas très répandues. Au vu des résultats fournis par S. Bilal
@@ -12,16 +13,18 @@ simple à développer et plus précise grâce aux outils fournis par la Kinect 2
 est l'adaptation du modèle à la main de l'utilisateur.\\
 
 %previsionnel
-Nous avons donc prévu une première phase dans le projet où nous allons intégrer les outils et le modèle
-dans une scène Unity3D au moyen de script. Cette première phase est divisée en plusieurs étapes permettant
-de partager au mieux les tâches entre chacun d'entre nous. La seconde phase est la réalisation du projet en lui-même, c'est-à-dire 
-que nous devons obtenir un modèle qui se déplace dans l'espace et effectue les mouvements de l'utilisateur.
-La dernière phase est la réalisation d'une application de démonstration qui doit valoriser notre travail
-en demandant à l'utilisateur d'effectuer une tâche qu'il ne pourrait réaliser avec d'autres périphériques comme
-la souris et le clavier. Cette application doit montrer le niveau de précision qu'il est possible d'atteindre
-avec ce genre de système.\\
+% Nous avons donc prévu une première phase dans le projet où nous allons intégrer les outils et le modèle
+% dans une scène Unity3D au moyen de script. Cette première phase est divisée en plusieurs étapes permettant
+% de partager au mieux les tâches entre chacun d'entre nous. La seconde phase est la réalisation du projet en lui-même, c'est-à-dire 
+% que nous devons obtenir un modèle qui se déplace dans l'espace et effectue les mouvements de l'utilisateur.
+% La dernière phase est la réalisation d'une application de démonstration qui doit valoriser notre travail
+% en demandant à l'utilisateur d'effectuer une tâche qu'il ne pourrait réaliser avec d'autres périphériques comme
+% la souris et le clavier. Cette application doit montrer le niveau de précision qu'il est possible d'atteindre
+% avec ce genre de système.\\
 
 %ce que nous avons appris
+%TODO modifier un peu pour que se soit d'actualité et ajout de l'apprentissage des outils mathematique et de développement + ajout 
+%des notions vu en cours qui nous on aidé durant le projet
 Cette première partie du projet a été très instructive, que ce soit sur l'apprentissage des techniques de détection et de manipulation
 de modèle 3D, que sur le plan de la collaboration en équipe. Nous avons énormément appris sur la rédaction d'un
 état de l'art, ainsi que sur la compréhension d'articles de recherche. Nous avons pu pleinement mettre à profit
