Ajout des images et modification de fichiers

--- a/edla/conclusion.tex
+++ b/edla/conclusion.tex
@@ -5,7 +5,7 @@
 Durant cet état de l'art, nous avons étudié plusieurs publications portant sur la détection et le suivi
 d'une main. Nous avons vu une première solution utilisant une image couleur. Cette solution était
 intéressante quand les caméras de profondeur n'étaient pas très répandues. Au vu des résultats fournis par S. Bilal
-\cite{haarlike}, cette méthode est efficace, mais elle n'est pas adaptée à la modélisation d'une main 3D. Elle permet seulement
+\cite{haarlike}, cette méthode est efficace, mais elle n'est pas adaptée à l'animation d'une main 3D. Elle permet seulement
 de suivre la main et de reconnaître quelques postures. De plus, les outils que l'on nous fournit nous permettent
 de gagner du temps sur certaines parties de notre développement et la méthode utilisant une image couleur
 est assez compliquée à implémenter. C'est pourquoi nous avons choisi la seconde méthode qui est plus
