--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -24,6 +24,17 @@
 
 \begin{document}
   
+   \begin{frame}
+    \begin{figure}
+      \includegraphics[width=4cm]{images/hand_joints.png}
+      \includegraphics[width=4cm]{images/exemple_hand_interact.jpg}
+    \end{figure}
+    \begin{figure}
+      \centering
+      \includegraphics[width=6cm]{images/skeletal-hand-model.jpg}
+    \end{figure}
+  \end{frame}
+  
   \frame{\titlepage}
   
    \begin{frame}
@@ -114,10 +125,17 @@
  	  \framesubtitle{Modélisation de la main}
  	  \begin{figure}
  	    \begin{center}
- 	      \includegraphics[width=10cm]{images/MethodeModelisation.png}
+ 	      \includegraphics[width=9cm]{images/MethodeModelisation.png}
  	      \label{fig:modelisation}
  	    \end{center}
  	  \end{figure}
+ 	  \begin{figure}
+ 	    \begin{center}
+ 	      \includegraphics[width=6cm]{images/FormuleEnergie.png}
+ 	      \label{fig:modelisationForm}
+ 	    \end{center}
+ 	  \end{figure}
+ 	  
  	  \cite{export:217428}
  	\end{frame}
  	
