--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -12,7 +12,7 @@ homme machine qui est le sujet de ce projet.\\
 
 L'homme utilise continuellement ses mains de manière naturelle. Nous 
 sommes extrêmement précis et habiles avec elles. Elles nous permettent 
-de ressentir des détails très fins. Au jour de l'écriture de ce rapport, 
+de ressentir des détails très fins. A ce jour, 
 utiliser les mains pour interagir avec un ordinateur reste encore limité.\\
 
 % état de la question
@@ -45,4 +45,7 @@ Dans un premier temps, nous décrivons notre projet, afin de comprendre
 précisément le problème et les enjeux liés à celui-ci. Ensuite, nous 
 réalisons un état de l'art ainsi qu'un prévisionnel afin de déterminer 
 les solutions adéquates pour notre problème et de planifier les tâches 
-qui seront à réaliser pour la réussite de l'application finale. Enfin, nous déterminons la meilleure solution pour notre projet.\\
+qui seront à réaliser pour la réussite de l'application finale. 
+%Enfin, nous déterminons la meilleure solution pour notre projet.\\
+Enfin, nous présentons ce que nous avons réalisé dans le projet afin
+d'obtenir un modèle de main cohérent qui effectue les gestes de l'utilisateur.
