--- a/edla/main.tex
+++ b/edla/main.tex
@@ -69,8 +69,8 @@
  \begin{flushright}
   \begin{spacing}{1.6}
     \textbf{
-      {\LARGE Présentation et état de l'art sur la détection, 
-      le suivi de la main et animation de celle-ci dans une scène 3D}
+      {\LARGE Présentation du projet et état de l'art sur la détection, 
+      le suivi de la main et l'animation de celle-ci dans une scène 3D}
     }
   \end{spacing}
   \hrule
