--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -189,13 +189,14 @@ provenant de l'image de profondeur. La fonction $\rho(e)$, quant à elle, est é
 %Blender
 Pour pouvoir animer une main de façon cohérente et réaliste, il existe plusieurs solutions.
 Cependant, dans le cadre d'une animation en temps réel et contrôlé par la main de l'utilisateur, des animations pré-calculées et maitrisées entièrement par l'animateur sont à abandonner.
-L'animation fine et la déformation de modèles 3D nécessite, le plus souvent, une armature.\newline
+L'animation fine et la déformation de modèles 3D nécessite, le plus souvent, une armature (voir Fig. \ref{fig:armature}).\newline
 
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[width=14cm]{images/SkellHand.jpg}
+	\includegraphics[width=9cm]{images/SkellHand.jpg}
 	\caption{Armature de la main droite réalisée sur blender}
+	\label{fig:armature}
 \end{figure}
 
 Les armatures permettent de modifier le modèle associé à partir de rotations et translations des jointures de cet armature.
@@ -203,7 +204,7 @@ Il existe de nombreuses méthodes pour réaliser cette modification.
 Celle utilisée majoritairement est d'associer les sommets du modèle aux jointures.
 Cette association peut être dure : un sommet est associé à une seule jointure, ou floue : un sommet peut être associé à plusieurs jointures par des poids différents.\newline
 
-Un algorithme permettant cette association floue est "bone heat weighting". \cite{baran2007automatic}
+Un algorithme permettant cette association floue est \og bone heat weighting \fg. \cite{baran2007automatic}
 Il permet de trouver les poids adaptés à l'association entre les os de l'armature et les sommets. Pour rendre un résultat proche du réel, on souhaite que les poids possède certaines propriétés : \\
 \begin{itemize}
 	\item Ils devraient être indépendants de la résolution du mesh, un sommet situé à un endroit du mesh devrait avoir le même poids quel
