--- a/edla/realisation.tex
+++ b/edla/realisation.tex
@@ -3,7 +3,7 @@
 \section{Séparation des tâches}
 \paragraph{}
 Nous constatons assez rapidement dans le projet qu'il est très difficile d'utiliser
-le SDK de la Kinect et la DLL directement dans Unity. Plusieurs projets, trouvé durant nos recherche, utilisent un système 
+le SDK de la Kinect et la DLL directement dans Unity. Plusieurs projets, trouvé durant nos recherches, utilisent un système 
 de socket afin de pouvoir envoyer des informations à une application Unity3D à partir d'une application C\#.
 Nous utilisons donc la même méthode afin de pouvoir séparer les différentes tâches de notre projet.
 
@@ -14,11 +14,11 @@ les données reçu. En effet, les données fournis pas la DLL ne peuvent être a
 Le repère des coordonnées fournis par la DLL est le repère image, donc un repère en 2D en pixel. Or, notre 
 application doit modèliser la main dans un environnement 3D.
 
-\paragraph{}
-Pour avoir une animation de la main la plus précise possible, nous récupérons également les points fournis par
-le SDK de la Kinect pour avoir plus d'information, mais également de vérifier les résultats calculés par 
-la DLL. Cette vérification ce fait sur le bout du pousse et sur le bout du majeur, car ces points sont communs
-à la DLL et au SDK.
+% \paragraph{}
+% Pour avoir une animation de la main la plus précise possible, nous récupérons également les points fournis par
+% le SDK de la Kinect pour avoir plus d'information, mais également de vérifier les résultats calculés par 
+% la DLL. Cette vérification ce fait sur le bout du pousse et sur le bout du majeur, car ces points sont communs
+% à la DLL et au SDK.
 
 \begin{figure}[H]
   \label{carte_main}
@@ -33,7 +33,7 @@ L'intérêt de cette séparation est que notre méthode de localisation des join
 DLL et que les calculs effectués sur les données sont spécifiques a celle-ci. En cas de changement de 
 technologie, il suffit de modifier le client sans avoir à changer l'application Unity3D. La seul contrainte
 étant la structure des socket envoyé. Nous avons donc une application modulable permettant de modifier 
-facilement la méthode de récupération les jointures, mais aussi de modifier le matériel utilisé.
+facilement la méthode de récupération des jointures, mais aussi de modifier le matériel utilisé.
 
 \begin{figure}[H]
   \label{schema_application}
@@ -62,8 +62,8 @@ la valeur dans le repère monde de la troisième coordonné de la jointure coura
 \paragraph{}
 La seconde problématique de notre méthode est la normalisation des coordonnées que nous avons récupérer. Les coordonnées
 de la kinect sont dans le repère monde, nous avons donc besoin d'utiliser les caractéristiques de la caméra pour normaliser
-les coordonnées. Nous prenons une distance de 4m pour la profondeur maximum de la caméra, car cela correspond à la profondeur 
-de champ de la Kinect.
+les coordonnées. Nous prenons une distance de 4m pour la profondeur de la caméra, car cela correspond à la zone de détection de
+la Kinect (voir Fig. \ref{fig:kinect1vs2}).
 
 \paragraph{}
 %TODO elliot : revoir paragraphe
@@ -82,13 +82,13 @@ suite à une succession de rotation.
 \paragraph{}
 Ensuite, nous formatons un message contenant les informations de la 
 Kinect et les coordonnées des jointures récupérées précedemment. Ce 
-message est créé par le client pour être au envoyé au serveur via le 
+message est créé par le client pour être envoyé au serveur via le 
 procole UDP. Enfin le message est traité par le serveur, afin d'obtenir 
 les données sous forme de variables exploitable.
 
 \paragraph{}
 Au cours du projet, les informations transmies au serveur ont évolué. 
-En premier lieu, nous envoyions un message lors que la DLL fonctionnait. 
+Dans un premier temps, nous envoyions un message lorsque la DLL fonctionnait. 
 La permier version du message contenait uniquement les coordonnées des 
 jointures détectées par la DLL avec leurs coordonnées Z normalisées. 
 Ces coordonnées ne sont pas suffisantes pour l'animation complète de la 
@@ -102,21 +102,21 @@ sur Unity.
   \end{center}
 \end{figure}
 
-En second lieu, nous avons ajouté les informations provenant de la 
+Dans second temps, nous avons ajouté les informations provenant de la 
 Kinect en plus de celles de la DLL. Dans ce message nous retrouvons 
 les positions relatives au mains calculé par la Kinect. En plus des 
-coordonnées des jointure de la DLL nous avons les positions :
+coordonnées des jointure de la DLL nous avons les positions :\\
 \begin{itemize}
   \item du poignet
   \item du centre de la main
   \item du bout de la main
   \item du pouce
 \end{itemize}
-
-Également, nous transmettons le status de la main que la Kinect a 
-assigné. Le message est envoyé lorsque les satus sont lasso, closed ou 
-open. Or, la Kinect est plus stable que la DLL. Pour certaines images 
-acquisent par la Kinect, les fonctions de la DLL de retrouve aucun 
+\paragraph{}
+Nous transmettons également le status de la main que la Kinect a 
+assigné. Le message est envoyé lorsque les status sont \og lasso \fg, \og closed \fg ou 
+\og open \fg. Pour certaines images 
+acquisent par la Kinect, les fonctions de la DLL ne retrouve aucun 
 résultats. Par exemple, lorsque l'on ferme la main, la DLL ne détecte 
 plus les doigts et aucun message n'est envoyé, alors que la Kinect a 
 détecté les points de la main.
@@ -128,7 +128,7 @@ détecté les points de la main.
   \end{center}
 \end{figure}
 
-En dernier lieu, nous optons pour deux messages diffèrents. Un message 
+Enfin, nous optons pour deux messages diffèrents. Un message 
 est envoyé quand la DLL n'a pas détecté de points. Et un message 
 différent est envoyé quand la DLL a retrouvé les jointures de la main. 
 Le champ \texttt{AiolosDLLStatus} est ajouté pour différencier les 
@@ -145,68 +145,48 @@ messages.
 \section{Modélisation et animation de la main}
 \paragraph{}
 %TODO pas besoin de savoir d'ou vient le modele
-Nous avons choisi de ne pas modéliser la main de l'utilisateur, à la place, nous avons récupérez un modèle de main existant.
+Nous avons choisi de ne pas modéliser la main de l'utilisateur, à la place, nous avons récupéré un modèle de main existant.
 %TODO revoir la tournur de phrase
-Sous Blender, nous avons appliqué à ce modèle une armature pour pouvoir l'animer de façon réaliste. Cette armature est constituée d'os et de jointures. On peut considérer que l'armature est 
-un arbre avec les noeuds qui sont des os et les arcs qui sont les jointures. Les transformations de chaque fils dépend des transformations de leurs père. Ainsi, un mouvement du poignet 
+Sous Blender, nous avons appliqué à ce modèle une armature pour pouvoir l'animer de façon réaliste. Cette armature est constituée d'os et de jointures. L'armature est représenté avec une structure 
+d'arbre, avec les noeuds qui représentent les os, et les arcs qui représentent les jointures. Les transformations de chaque fils dépendent des transformations de leurs père. Ainsi, un mouvement du poignet 
 entraine le mouvement de chaque os de la main. Cette armature pourra être utilisée pour mimer la main de l'utilisateur. 
 
 \paragraph{}
 %TODO ne pas mettre de retourner à l'état de l'art -> peut etre mettre une reference en latex si besoin
-Pour relier l'armature au modèle, on utilise une méthode de skinning. Le skinning est expliquée dans l'état de l'art. Dans Blender, on peut utiliser différent types de skinning, 
-soit \og à la main \fg en créant des groupes de sommets à associer à chaque jointures, soit en utilisant des algorithmes de création des groupes et d'attribution automatique des 
-sommets à ces groupes. Nous avons choisi d'utiliser la méthode \og bone heat \fg. \cite{baran2007automatic}
+Pour relier l'armature au modèle, on utilise une méthode de \og skinning \fg (\textit{cf} \ref{animation}). Dans Blender, on peut utiliser différent types de skinning, 
+soit \og à la main \fg \ en créant des groupes de sommets à associer à chaque jointures, soit en utilisant des algorithmes de création des groupes et d'attribution automatique des 
+sommets à ces groupes. Nous avons choisi d'utiliser la méthode \og bone heat weighting \fg \cite{baran2007automatic}. 
 
 \paragraph{}
-Le modèle et armature ainsi créés sont importés dans Unity3D tout en conservant les associations effectuées par le skinning. Ensuite, on teste ce modèle en l'animant à l'aide de 
-rotations des jointures, on peut ainsi faire prendre des poses à la main. 
+Le modèle et armature ainsi créés sont importés dans Unity3D tout en conservant les associations effectuées par le skinning. 
+Ensuite, on teste ce modèle en l'animant à l'aide de rotations des jointures, on peut ainsi faire prendre des poses à la main (voir Fig. \ref{fig:poseMain}). 
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[width=0.45\textwidth]{images/HandPose1.png}
-	\includegraphics[width=0.46\textwidth]{images/HandPose2.png}
-	\caption{Poses réalisées à partir de rotations des jointures de l'armature dans Unity}
+	\includegraphics[height=6cm]{images/HandPose1.png}
+	\includegraphics[height=6cm]{images/HandPose2.png}
+	\caption{Exemple de poses réalisées à partir de rotations des jointures de l'armature dans Unity}
+	\label{fig:poseMain}
 \end{figure}
 
-\paragraph{}
-Les différentes techniques d'animation basé sur une armature sont décrites dans l'état de l'art correspondant. 
-Pour notre projet, nous avons choisi la méthode qui utilise les articulations récupérées par la DLL en conjonction avec les points récupérés \textit{via} le SDK de la Kinect. 
-Ces points servent à positionner les jointures de l'armature par translations et/ou rotations.\newline
+\paragraph{} 
+Il existe différentes techniques d'animation basé sur une armature (\textit{cf} \ref{animation}).
+Pour notre projet, nous avons choisi la méthode qui utilise les articulations récupérées par la DLL en conjonction avec les points récupérés \textit{via} le SDK de la Kinect. Ces points servent à positionner les jointures de l'armature par translations et/ou rotations.
 %TODO pour le sommet du pouce on verra : comme dirait papi je suis pas convaincu
-On utilise les points suivants détectés par la Kinect : le poignet, le milieu de la main et le sommet du pouce pour positionner et orienter le modèle en concordance avec les points détectés par la DLL.
-Pour cela, on applique une translation du modèle, vers la position du poignet détecté. Puis on calcule l'angle entre les vecteurs $V_{AB}$ et $V_{CB}$  : 
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.7\textwidth]{images/SchemaRotationMain.jpg}
-\caption{Schéma d'explication du calcul des vecteurs utilisés pour calculer la rotation du poignet}
-\end{figure}
+On utilise le poignet et le milieu de la main pour positionner et orienter le modèle en concordance avec les points détectés par la DLL.
+Pour cela, on applique une translation du modèle, vers la position du poignet détecté. Puis, on calcul les angles entre la position de départ
+de la main et sa position courante.
 
 %TODO elliot -> explication du calcul de l'angle
 % On applique une rotation de l'angle calculé à l'armature du modèle, cela permet de retrouver l'orientation de la main sur l'axe X et Y.
 % Une opération similaire est effectuée avec la base du pouce à la place du milieu de la main pour trouver l'orientation en Z: 
-% 
+%
+\paragraph{} 
+Une fois le modèle correctement positionné et orienté, il faut s'occuper des doigts.
 Nous pouvons voir sur la Fig. \ref{} que le modèle est complètement déformé et ne correspond plus à la main d'un utilisateur. Les points d'un modèle
 ne sont pas fait pour être manipulé directement dans l'espace, il est préférable de calculer des angles pour chaque jointure afin de leur appliquer 
-des rotations. Pour cela, nous reprenons la même méthode que pous le poignet en prenant la rotation de départ du modèle et en applicant une rotation
-avec le nouvel angle.
+des rotations. Une partie complexe a été de décider d'une méthode de calcul des angles des jointures et de l'implémenter.
+Nous avons choisi de reprendre la même méthode que pour le poignet en prenant la rotation de départ du modèle et en applicant une rotation avec le nouvel angle.
 %TODO prendre un screenshot de l ecran pour le problème de rotation de la main
 
 %TODO prendre une image de la main avec un axe horizontal et l'angle à calculer
-
-\paragraph{}
-%TODO expliquer les 2 méthodes position et rotation
-Une fois le modèle correctement positionné et orienté, il faut s'occuper des doigts. Une partie complexe a été de décider d'une méthode de calcul des angles des jointures et de l'implémenter.
-Nous avons choisi de calculer les angles de la même façon que pour le poignet (à l'aide de vecteurs) et sur le même principe.\\
-Les vecteurs sont formés par les points suivants : la jointure qui sert de pivot et le point suivant dans l'armature forment un vecteur, ainsi que la jointure (pivot) et le point détecté par la DLL correspondant au point de l'armature. (cf. Figure 3.5)
-
-\newpage
-
-%TODO manque l'image
-\begin{figure}[H]
- \centering
- \includegraphics[width=0.7\textwidth]{images/SchemaRotationDoigt.png}
- \caption{Schéma d'explication du calcul de l'angle aux jointures de l'armature}
-\end{figure}
-
-\section{L'application de démonstration}
